--- a/docker/mysql/docker-compose.yml
+++ b/docker/mysql/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: bytv-mysql
     environment: # -e 옵션
       - MYSQL_DATABASE=pass_module
-      - MYSQL_ROOT_PASSWORD=bytv10041004! # MYSQL 패스워드 설정 옵션
+      - MYSQL_ROOT_PASSWORD=qwer1234 # MYSQL 패스워드 설정 옵션
       - TZ=Asia/Seoul
     ports:
       - "3306:3306" # 접근 포트 설정 (컨테이너 외부:컨테이너 내부)  <- 컨테이너 내부는 무조건 3306
