--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "email-validator": "^2.0.4",
     "koa": "^2.13.3",
+    "koa-body": "^4.2.0",
     "koa-router": "^10.1.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.13",
-    "passport": "^0.5.0"
+    "passport": "^0.5.0",
+    "util": "^0.12.4"
   },
   "description": ""
 }
