--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
-    "email-validator": "^2.0.4",
     "koa": "^2.13.3",
     "koa-body": "^4.2.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-passport": "^3.0",
     "koa-router": "^10.1.1",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.13",
-    "passport": "^0.5.0",
-    "util": "^0.12.4"
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
+    "util": "^0.12.4",
+    "validator": "^13.6.0"
   },
   "description": ""
 }
